--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
             <div class="vision-wrapper bg-img cover-background" data-overlay-dark="2" data-background="../static/img/bg-sr/bg4.png">
                 <div class="vision-content">
                     <h4 class="text-white mb-3"  style="color:#13214c">Our Products</h4>
-                    <p class="mb-0 text-white">School Uniforms, Bags, Shoes, Stationery Sports Attire, Embroidery, Sublimation Printing, Heat transfer Designs too are offered.
+                    <p class="mb-0 text-white">School Uniforms, Notebooks, Embroidery, Sublimation Printing, Heat transfer Designs too are offered.
                     </p>
                 </div>
             </div>
