--- a/templates/contact.html
+++ b/templates/contact.html
@@ -99,7 +99,7 @@
                                                     id="name" 
                                                     type="text" 
                                                     name="name" 
-                                                    placeholder="Your School Name" 
+                                                    placeholder="Your School Name and Location" 
                                                     style="border:1.5px solid #213e96; width: 75%;" 
                                                     required
                                                 />
