update new products

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,43 @@
                                 </div>
                             </div>
                         </div>
+<div class="row justify-content-center">
+    <!-- School Socks -->
+    <div class="col-md-6 col-lg-4 mt-1-9">
+        <div class="card card-style8 border-0">
+            <div class="card-body d-flex p-0">
+                <div class="flex-shrink-0 icon-holder position-relative">
+                    <div class="box"></div>
+                    <img src="static/img/icon/socks.png" alt="School Socks" class="img-fluid" style="max-width:80px;">
+                </div>
+                <div class="flex-grow-1 ms-4">
+                    <h4>School Socks</h4>
+                    <p class="mb-0 text-justify">
+                        Comfort meets durability with our premium school socks. Designed to keep students comfortable throughout the day, these socks are breathable, long-lasting, and perfectly match school uniforms.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- School Blazers -->
+    <div class="col-md-6 col-lg-4 mt-1-9">
+        <div class="card card-style8 border-0">
+            <div class="card-body d-flex p-0">
+                <div class="flex-shrink-0 icon-holder position-relative">
+                    <div class="box"></div>
+                    <img src="static/img/icon/blazer.png" alt="School Blazers" class="img-fluid" style="max-width:80px;">
+                </div>
+                <div class="flex-grow-1 ms-4">
+                    <h4>School Blazers</h4>
+                    <p class="mb-0 text-justify">
+                        Our school blazers add elegance and professionalism to the uniform. Made from premium fabric, they ensure durability, comfort, and a smart look that reflects discipline and school pride.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
                     </div>
                 </div>
             </div>
