--- a/templates/product.html
+++ b/templates/product.html
@@ -203,6 +203,100 @@
                 </div>
             </div>
         </section>
+<!-- BLAZERS SECTION (Image Left) -->
+<section class="position-relative" style="padding: 20px 0 0 0;">
+    <div class="container position-relative z-index-1">
+        <div class="row justify-content-center">
+            <div class="col-lg-4 mt-1-9 wow fadeIn" data-wow-delay="200ms">
+                <div class="text-center position-relative d-flex justify-content-center align-items-center flex-wrap gap-2">
+                    <img src="../static/img/about-sr/blazer1.jpg" alt="school blazer 1" class="img-fluid w-45 rounded">
+                    <img src="../static/img/about-sr/blazer2.jpg" alt="school blazer 2" class="img-fluid w-45 rounded">
+                    <img src="../static/img/about-sr/blazer3.jpg" alt="school blazer 3" class="img-fluid w-45 rounded mt-2">
+                    <img src="../static/img/about-sr/blazer4.jpg" alt="school blazer 4" class="img-fluid w-45 rounded mt-2">
+                </div>
+            </div>
+            <div class="col-lg-8 col-xxl-8 mb-1-9 mb-lg-0 wow fadeIn" data-wow-delay="200ms"
+                style="visibility: visible; animation-delay: 200ms; animation-name: fadeIn;">
+                <div class="pe-lg-1-9 pe-xl-7">
+                    <h4 class="h1 mb-4 mt-2 z-index-2 position-relative" style="color: #13214c;">Blazers</h4>
+                    <ul class="list-style2 mb-1-9">
+                        <li>
+                            <span>Give your institution a touch of prestige with our tailored <b>school blazers</b>.
+                                Designed to reflect discipline and sophistication, our blazers make students look smart
+                                and confident.</span>
+                        </li>
+                        <li>
+                            <b>Features:</b>
+                            <span>
+                                High-quality fabrics with excellent finish<br>
+                                Perfect fit for boys and girls in all sizes<br>
+                                Custom embroidery with school logos, crests, and badges<br>
+                                Available in multiple colors and designs to match institutional branding
+                            </span>
+                        </li>
+                        <li>
+                            <b>Benefits:</b><br>
+                            <span>
+                                Enhances the professional image of your institution<br>
+                                Wrinkle-resistant and durable for long-term use<br>
+                                Comfortable lining for extended wear<br>
+                                Special discounts for bulk school orders
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- SOCKS SECTION (Image Right) -->
+<section class="position-relative" style="padding: 20px 0 0 0;">
+    <div class="container position-relative z-index-1">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-xxl-8 mb-1-9 mb-lg-0 wow fadeIn" data-wow-delay="200ms"
+                style="visibility: visible; animation-delay: 200ms; animation-name: fadeIn;">
+                <div class="pe-lg-1-9 pe-xl-7">
+                    <h4 class="h1 mb-4 mt-2 z-index-2 position-relative" style="color: #13214c;">Socks</h4>
+                    <ul class="list-style2 mb-1-9">
+                        <li>
+                            <span>Ensure students experience all-day comfort with our premium <b>school socks</b>.
+                                Designed for durability and breathability, our socks are perfect for daily wear in all
+                                weather conditions.</span>
+                        </li>
+                        <li>
+                            <b>Features:</b>
+                            <span>
+                                Soft, skin-friendly fabrics for maximum comfort<br>
+                                Anti-bacterial and sweat-absorbing material to keep feet fresh<br>
+                                Strong elastic bands for a secure fit<br>
+                                Available in multiple colors and lengths (ankle, calf, knee-high) to match your school’s
+                                dress code
+                            </span>
+                        </li>
+                        <li>
+                            <b>Benefits:</b><br>
+                            <span>
+                                Long-lasting wear with reinforced heels and toes<br>
+                                Easy to wash and quick-dry fabric<br>
+                                Custom designs with school colors and logos available<br>
+                                Bulk Order Discounts for schools and institutions
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-4 mt-1-9 wow fadeIn" data-wow-delay="200ms">
+                <div class="text-center position-relative d-flex justify-content-center align-items-center flex-wrap gap-2">
+                    <img src="../static/img/about-sr/socks1.jpg" alt="school socks 1" class="img-fluid w-45 rounded">
+                    <img src="../static/img/about-sr/socks2.jpg" alt="school socks 2" class="img-fluid w-45 rounded">
+                    <img src="../static/img/about-sr/socks3.jpg" alt="school socks 3" class="img-fluid w-45 rounded mt-2">
+                    <img src="../static/img/about-sr/socks4.jpg" alt="school socks 4" class="img-fluid w-45 rounded mt-2">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
         <br>
         <section class="position-relative" style="padding: 20px 0 0 0;">
             <div class="container position-relative z-index-1">
@@ -315,4 +409,5 @@
         </section>
         <br>
         {% endblock %}
+  %}
  
