--- a/templates/product.html
+++ b/templates/product.html
@@ -290,7 +290,7 @@
                 <div class="text-center position-relative d-flex justify-content-center align-items-center flex-wrap gap-2">
                     <img src="../static/img/about-sr/socks1.jpg" alt="school socks 1" class="img-fluid w-45 rounded">
                     <img src="../static/img/about-sr/socks2.jpg" alt="school socks 2" class="img-fluid w-45 rounded">
-                    <img src="../static/img/about-sr/socks3.jpg" alt="school socks 3" class="img-fluid w-45 rounded mt-2">
+                    <img src="../static/img/about-sr/socks3.png" alt="school socks 3" class="img-fluid w-45 rounded mt-2">
                     <img src="../static/img/about-sr/socks4.jpg" alt="school socks 4" class="img-fluid w-45 rounded mt-2">
                 </div>
             </div>
