--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                                 <div class="card-body d-flex p-0">
                                     <div class="flex-shrink-0 icon-holder position-relative">
                                         <div class="box"></div>                                                           
-                                        <img src="../static/img/icon/basketball-jersey.png" alt="">
+                                       <img src="../static/img/about-sr/sports.png" alt="...">
                                     </div>
                                     <div class="flex-grow-1 ms-4">
                                         <h4>Sports Attire</h4>
